--- a/styles/styles.css
+++ b/styles/styles.css
@@ -216,7 +216,7 @@ body {
   .container {
     border-radius: 24px;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     margin-top: 0vh;
     gap: 3vh;
   }
